[gd_scene load_steps=3 format=3 uid="uid://di7ifupax4nv3"]

[ext_resource type="Script" path="res://scripts/fin.gd" id="1_66fns"]
[ext_resource type="Theme" uid="uid://cany6akrotmf6" path="res://themes/theme.tres" id="2_uhbgl"]

[node name="Fin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_66fns")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uhbgl")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TituloFin" type="Label" parent="Panel/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "asdasdas"
horizontal_alignment = 1

[node name="Nivel" type="Label" parent="Panel/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Nivel"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/Panel/VBoxContainer"]
self_modulate = Color(0.196078, 1, 1, 1)
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Aciertos" type="Label" parent="Panel/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Aciertos"
horizontal_alignment = 1

[node name="Buenas" type="Label" parent="Panel/Panel/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.290196, 0.611765, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Buenas"
horizontal_alignment = 1

[node name="Exelentes" type="Label" parent="Panel/Panel/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.215686, 0.839216, 0.34902, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Excelentes"
horizontal_alignment = 1

[node name="Perfectas" type="Label" parent="Panel/Panel/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 0.247059, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Perfectas"
horizontal_alignment = 1

[node name="MayorCombo" type="Label" parent="Panel/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Mayor combo"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -242.0
offset_top = -36.0
offset_right = 242.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Salir" type="Button" parent="Panel/Panel/HBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Salir"

[connection signal="pressed" from="Panel/Panel/HBoxContainer/Salir" to="." method="_on_salir_pressed"]
